--- a/styles.css
+++ b/styles.css
@@ -75,4 +75,21 @@ body {
     align-items: center;
     margin-top: 10px; /* Espaço entre a caixa de resposta e o container do botão */
   }
-  
+  /* Seu estilo existente */
+#response-text {
+  font-size: 18px; /* Ajuste o tamanho da fonte conforme necessário */
+  margin-top: 10px; /* Espaço entre o texto e a imagem */
+}
+
+#answer-button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px; /* Espaço entre a caixa de resposta e o container do botão */
+}
+
+/* Estilo específico para a imagem da fase 11 */
+#phase-image.phase11 {
+  width: 800px; /* Largura desejada para a fase 11 */
+  height: auto;
+}
